# bazel-monoio

./: README.md
cross_llvm/: BUILD.bazel  MODULE.bazel  README.md  cross_llvm_error_log.txt
cross_musl/: .bazelrc  MODULE.bazel  README.md  cross_musl_error_log.txt
from_spec/: .gitignore  BUILD.bazel  MODULE.bazel
from_spec/src/: main.rs
